# moonos

./: Cargo.toml  Xargo.toml  build.sh  notes.md  run.sh
.cargo/: config
kernel/: boot.S  linker.ld  vectors.S
src/: console.rs  debug.rs  font.rs  framebuffer.rs  gpio.rs  interrupts.rs  lib.rs  limoncello.rs  mailbox.rs  mmio.rs  native.rs  optional_callback.rs  raspi.rs  screen.rs  spinlock.rs  text_display.rs  text_screen.rs  timer.rs  uart.rs  vectors.rs
