[package]
name = "moon"
version = "0.1.0"
authors = [ "Robey Pointer <robeypointer@gmail.com>" ]

[lib]
name = "moon"
crate-type = [ "staticlib" ]

[dependencies]
rlibc = "1.0"
volatile = "0.2.3"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
