[package]
name = "moon"
version = "0.1.0"
authors = [ "Robey Pointer <robeypointer@gmail.com>" ]

[lib]
name = "moon"
crate-type = [ "staticlib" ]

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
rlibc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
